session-12-ingress-configmaps-secrets/k8s-ingress/app-deployments-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple-container
        image: nginx:alpine
        command: ["/bin/sh", "-c", "echo '<h1>🍎 Welcome to Apple App Backend (Route: /apple)</h1>' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  type: ClusterIP
  selector:
    app: apple
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana-container
        image: nginx:alpine
        command: ["/bin/sh", "-c", "echo '<h1>🍌 Welcome to Banana App Backend (Route: /banana)</h1>' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  type: ClusterIP
  selector:
    app: banana
  ports:
  - port: 80
    targetPort: 80
